--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": " To-Do-App_HTML5/CSS3/Node.js/SQL",
   "main": "server/app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server/app.js"
   },
   "repository": {
     "type": "git",
